<resources>
    <string name="app_name">ScanMe</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="terms_conditions">Before getting started, agree with our terms and conditions</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="title_activity_registration">registration</string>
    <string name="tab_text_1">LOGIN</string>
    <string name="tab_text_2">SIGN UP</string>
    <string name="welcome">Welcome to ScanMe,</string>
    <string name="signup_or_login_into_an_account">Signup or Login to continue</string>
    <string name="username">Username</string>
    <string name="email_input">Input your email in here</string>
    <string name="password">Password</string>
    <string name="category1">Automotive Parts &amp; Accessories</string>
    <string name="category2">Electronics</string>
    <string name="category3">Health &amp; Personal care</string>
    <string name="category4">Pet supply</string>
    <string name="category5">Sport &amp; Outdoor</string>
    <string name="category6">Tools</string>
    <string name="category7">Video Games</string>
    <string name="category8">Home &amp; Garden</string>
    <string name="category9">Baby products</string>
    <string name="category10">Essentials</string>
    <string name="pick_preferences">Pick your preferences</string>
    <string name="Email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="action_cart">Cart</string>
    <string name="action_history">History</string>
    <string name="action_home">Home</string>
    <string name="search_by_upc">Search product by UPC</string>
    <string name="click_to_scan">Click on the SCAN to scan a barcode</string>
    <string name="action_help">Help</string>
    <string name="action_account">Account</string>
    <string name="action_product">Product</string>
    <string name="Search">Search</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>