<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_account"
        android:orderInCategory="300"
        android:iconTint="@color/background"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/action_account"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="200"
        android:iconTint="@color/background"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/action_history"

        app:showAsAction="always" />
    <item
        android:id="@+id/action_home"
        android:iconTint="@color/background"
        android:iconTintMode="add"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/action_home"
        app:showAsAction="always" />
</menu>