<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.acamara.scanme.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_history"
            app:destination="@id/nav_history"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
        <action
            android:id="@+id/action_nav_home_to_nav_cart"
            app:destination="@id/nav_cart"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
        <action
            android:id="@+id/action_nav_home_to_mapsActivity"
            app:destination="@id/mapsActivity" />
        <action
            android:id="@+id/action_nav_home_to_nav_account2"
            app:destination="@id/nav_account" />
        <action
            android:id="@+id/action_nav_home_self2"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_help"
            app:destination="@id/nav_help" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.acamara.scanme.ui.history.HistoryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_nav_history_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.acamara.scanme.ui.cart.CartFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_nav_cart_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>
    <fragment
        android:id="@+id/nav_account"
        android:name="com.acamara.scanme.ui.account.AccountFragment"
        android:label="account_fragment"
        tools:layout="@layout/account_fragment" >
        <action
            android:id="@+id/action_accountFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_help"
        android:name="com.acamara.scanme.ui.help.HelpFragment"
        android:label="help_fragment"
        tools:layout="@layout/help_fragment" >
        <action
            android:id="@+id/action_helpFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <activity
        android:id="@+id/mapsActivity"
        android:name="com.acamara.scanme.ui.map.MapsActivity"
        android:label="activity_maps"
        tools:layout="@layout/activity_maps" />
</navigation>